# duckduckgo_search

./: .gitignore  README.md  duckduckgo.py  duckduckgo_search.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml
duckduckgo_search/: __init__.py  __main__.py  cli.py  compat.py  ddg.py  ddg_answers.py  ddg_images.py  ddg_maps.py  ddg_news.py  ddg_suggestions.py  ddg_translate.py  ddg_videos.py  duckduckgo_search.py  duckduckgo_search_async.py  exceptions.py  headers.py  models.py  utils.py  version.py
duckduckgo_search/cli/: ddgs.py
tests/: __init__.py  test_cli.py  test_ddg.py  test_ddg_answers.py  test_ddg_images.py  test_ddg_maps.py  test_ddg_news.py  test_ddg_suggestions.py  test_ddg_translate.py  test_ddg_videos.py  test_duckduckgo_search.py  test_duckduckgo_search_async.py  test_utils.py
