[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo_search"
description = "Search for words, documents, images, news, maps and text translation using the DuckDuckGo.com search engine."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
keywords = ["python", "duckduckgo"]
authors = [
  {name = "deedy5"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiofiles>=23.2.1",
    "click>=8.1.7",
    "lxml>=4.9.3",
    "httpx[http2,socks,brotli]>=0.25.1",
]
dynamic = ["version"]

[project.urls]  # Optional
"Homepage" = "https://github.com/deedy5/duckduckgo_search"

[project.scripts]
ddgs = "duckduckgo_search.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "duckduckgo_search.version.__version__"}

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "isort>=5.12.0",
    "ruff>=0.0.291",
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
atomic = true
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py38"
