[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo_search"
description = "Search for words, documents, images, news, maps and text translation using the DuckDuckGo.com search engine."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
keywords = ["python", "duckduckgo"]
authors = [
  {name = "deedy5"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.7",
    "pyreqwest_impersonate>=0.4.9",
    "orjson>=3.10.6",
]
dynamic = ["version"]

[project.urls]  # Optional
"Homepage" = "https://github.com/deedy5/duckduckgo_search"

[project.scripts]
ddgs = "duckduckgo_search.cli:safe_entry_point"

[tool.setuptools.dynamic]
version = {attr = "duckduckgo_search.version.__version__"}

[project.optional-dependencies]
lxml = [
    "lxml>=5.2.2",
]
dev = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]
ignore = ["D100"]

[tool.mypy]
python_version = "3.8"
strict = true
exclude = ['cli\.py$', '__main__\.py$', "tests/", "build/"]
