[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo_search"
description = "Search for words, documents, images, news, maps and text translation using the DuckDuckGo.com search engine."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
keywords = ["python", "duckduckgo"]
authors = [
  {name = "deedy5"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.8",
    "primp>=0.14.0",
    "lxml>=5.3.0",
]
dynamic = ["version"]

[project.urls]  # Optional
"Homepage" = "https://github.com/deedy5/duckduckgo_search"

[project.scripts]
ddgs = "duckduckgo_search.cli:safe_entry_point"

[tool.setuptools.dynamic]
version = {attr = "duckduckgo_search.version.__version__"}

[project.optional-dependencies]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-dependency>=0.6.0",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 120
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]

[tool.mypy]
python_version = "3.9"
strict = true
exclude = ['cli\.py$', '__main__\.py$', "tests/", "build/"]
